--- a/src/Interfaz/AgregarMateria.form
+++ b/src/Interfaz/AgregarMateria.form
@@ -73,7 +73,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="jButton1">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Agregar horario"/>
+        <Property name="text" type="java.lang.String" value="Agregar clase"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
